links actualizados - invitación y documentación

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="container">
         <nav>
             <ul>
-                <li><a href="...">Docs</a></li>
-                <li><a href="...">Soporte</a></li>
+                <li><a href="https://github.com/KamerrEzz/ZeewApi">Docs</a></li>
+                <li><a href="https://discord.com/invite/Nuxu9ZE">Soporte</a></li>
                 <li><a href="...">FAQ</a></li>
             </ul>
         </nav>
@@ -41,7 +41,7 @@
 
     <footer class="container">
         <ul>
-            <li><a href="...">soporte</a></li>
+            <li><a href="https://discord.com/invite/Nuxu9ZE">soporte</a></li>
             <li><a href="...">ZeewApi Economia</a></li>
             <li><a href="https://www.kamerrezz.com" target="_blank">Kamerr Ezz</a></li>
         </ul>
